# sword_reaches

./: .gitignore  3A26_output.csv  B1_output.csv  BASED_inferenceALLRIVERS.py  BASED_inferenceARG_LAKE.py  BASED_inferenceB1.py  BASED_inferenceB14.py  BASED_inferenceBERMARIVO.py  BASED_inferenceBLACK.py  BASED_inferenceMADA1.py  BASED_inferenceMAHAJAMBA.py  BASED_inferenceMALAWI_2014.py  BASED_inferenceRIOPIRAI.py  BASED_inferenceRUVU.py  BASED_inferenceSULENGGUOLE.py  BASED_inferenceTAMBOPATA.py  BASED_inferenceTRINITY.py  BASED_inferenceV11.py  BASED_inferenceV7.py  BASED_inferenceVENEZ_2022_N.py  BASED_inferenceVENEZ_2023.py  BASED_inferenceVENEZ_2023_W.py  VENEZ_outputFULL3.csv  autocorr.py  avtwmm.geojson  checker_sentinel.ipynb  discharge_correction.py  for_testing_output.csv  format_funcs.py  gee_sampler.py  gee_sampler_bigquery.py  geometric_operations.py  gui.py  gui_edit.py  icesat2_wse.py  multi_plotter copy.py  multi_plotter.py  old_funcs  plotter_scratch.ipynb  pyproject.toml  (+6 more)
.history/: geometric_operations_20240108223746.py  geometric_operations_20240117132723.py  geometric_operations_20240117132746.py  geometric_operations_20240117132747.py  geometric_operations_20240117132749.py  gui_20240117125036.py  gui_20240117125101.py  gui_20240117125108.py  gui_20240117125114.py  gui_20240117125721.py  gui_20240117125722.py  gui_20240117125724.py  gui_20240117125725.py  gui_20240117125726.py  gui_20240117125727.py  gui_20240117125748.py  gui_20240117125750.py  gui_20240117125751.py  gui_20240117125754.py  gui_20240117125755.py  gui_20240117125756.py  gui_20240117125757.py  gui_20240117125758.py  gui_20240117125759.py  gui_20240117125800.py  gui_20240117125801.py  gui_20240117125802.py  gui_20240117125804.py  gui_20240117125807.py  gui_20240117125808.py  gui_20240117125901.py  gui_20240117125904.py  gui_20240117125905.py  gui_20240117125906.py  gui_20240117125907.py  gui_20240117125908.py  gui_20240117125909.py  gui_20240117125910.py  (+270 more)
(+45 files in other folders)
