[tool.poetry]
name = "sword-reaches"
version = "0.1.0"
description = ""
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.1"
earthengine-api = "^0.1.384"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
sqlalchemy = "^2.0.24"
cartopy = "^0.22.0"
scikit-learn = "^1.3.2"
shapely = "^2.0.2"
gcsfs = "^2023.12.2.post1"
google = "^3.0.0"
geemap = "^0.30.0"
statsmodels = "^0.14.1"
psycopg2-binary = "^2.9.9"
openpyxl = "^3.1.2"
pywavelets = "^1.5.0"
pyarrow = "^14.0.2"
pyqt5 = "^5.15.10"
xee = "^0.0.6"
binsreg = "^2.1.4"
xgboost = "^2.0.3"
sliderule = "^4.3.1"
pygeodesy = "^24.4.4"
nbformat = "^5.10.4"
pystac-client = "^0.7.6"
odc-stac = "^0.3.9"
h5py = "^3.10.0"
fsspec = "2023.12.2"
duckdb = "^0.10.1"
netcdf4 = "^1.6.5"
pydap = "^3.4.1"
h5pyd = "^0.18.0"
aiohttp = "^3.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
